--- a/style.css
+++ b/style.css
@@ -64,18 +64,14 @@ from{
     height: 200px;
     background-color: black;
 }
-.box6{
-    width: 400px;
-    height:200px;
-    background-color:green;
-}
+
 .box3, .box4, .box5, .box6{
     float: left;
     margin: auto;
 }
 
 p{
-    padding-bottom: 300px;
+    padding-bottom: 100px;
 }
 
 .box-container{
@@ -85,3 +81,35 @@ p{
     justify-content: center;
     gap: 20px;
 }   
+input{
+    font-size:20px;
+}
+
+h3:nth-child(4){
+    color: red;
+}
+
+p::first-letter{
+    color:red;
+    font-size:30px;
+}
+img{
+    width:100px;
+}
+img:hover{
+    opacity:0.5;
+}
+.bg{
+    width:700px;
+    height: 400px;
+    background: url(love_2.jpg) no-repeat center;
+    overflow: hidden;
+}
+.box h2{
+  text-align: center;
+  background-color: white;
+  padding: 5px;
+  margin-top: 200px;
+  opacity: 0.5; 
+    
+}
