--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1{
     font-size: 80px;
     font-style: oblique;
     color:aliceblue;
+    text-shadow: 10px 5px 10px;
     
   
 }
@@ -62,7 +63,7 @@ from{
 .box5{
     width: 400px;
     height: 200px;
-    background-color: black;
+    background: linear-gradient(Black 20px,red)
 }
 
 .box3, .box4, .box5, .box6{
@@ -85,7 +86,7 @@ input{
     font-size:20px;
 }
 
-h3:nth-child(4){
+h3:nth-child(3){
     color: red;
 }
 
@@ -104,12 +105,17 @@ img:hover{
     height: 400px;
     background: url(love_2.jpg) no-repeat center;
     overflow: hidden;
+    border: 1px solid red;
+    margin: 100px 100px;
+
+    box-shadow: 20px 10px 5px rgb(0,0,0,0.5),
+    -20px -10px 5px rgb(0,0,0,0.5);
 }
 .box h2{
   text-align: center;
   background-color: white;
   padding: 5px;
   margin-top: 200px;
-  opacity: 0.5; 
+  opacity: 0.5;   
     
 }
