--- a/style.css
+++ b/style.css
@@ -119,3 +119,43 @@ img:hover{
   opacity: 0.5;   
     
 }
+
+.social{
+    width: 80px;
+    height: 80px;
+    background-image: url(social.png);
+    background-position: 0 -91px;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    transition: 1s;
+    background-color: aqua;
+ 
+    
+}
+.social:hover{
+    background-position: 0 -161px;
+}
+.transform h4{
+    text-align: center;
+    color: green;
+    font-size: 50px;
+}
+.box7{
+width: 400px;
+height: 400px;
+background-color: tomato;
+margin: 100px auto;
+position: relative;
+transform: skewY(35deg);
+
+}
+
+.box7 h5{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    top: 40%;
+    
+}
