--- a/style.css
+++ b/style.css
@@ -1,161 +1,202 @@
-marquee{ 
-    color: red;
-    font-size: 50px;
-}
-h1{
-    background-color: blue;
-    font-size: 80px;
-    font-style: oblique;
-    color:aliceblue;
-    text-shadow: 10px 5px 10px;
-    
-  
-}
-from{
-    color: blue;
+body {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  background-color: #ddd;
 }
 
-.header{
-    position: sticky;
-    top: 0;
-    z-index: inherit;
-
+h1 {
+  background-color: blue;
+  font-size: 80px;
+  font-style: oblique;
+  color: aliceblue;
+  text-shadow: 10px 5px 10px;
+  margin-top: auto;
+  position: sticky;
+  z-index: inherit;
 }
 
-.box1{
-    width: 600px;
-    height:400px;
-    background-color:green;
-    position: relative;
+header {
+  width: 100%;
+  color: rgb(240, 7, 7);
+  display: flex;
 }
-.box2{
-    width:300px;
-    height: 200px;
-    background-color: red;
-    position:absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    margin: auto;
-    border-radius: 50%;
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.shamim{
-    color: red;
-    font-size: 50px;
-    position: fixed;
-    bottom: 0;
-    right: 0;  
-    background-color: aqua;
-    font-style:oblique;
+.navbar ul {
+  list-style: none;
 }
-.box3{
-    width: 400px;
-    height: 200px;
-    background-color: brown;
+.navbar ul li {
+  background-color: #262626;
+  width: 170px;
+  height: 50px;
+  line-height: 50px;
+  border: 1px solid #fff;
+  text-align: center;
+  float: left;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: relative;
 }
-
-.box4{
-    width:400px;
-    height:200px;
-    background-color: blue;
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
-.box5{
-    width: 400px;
-    height: 200px;
-    background: linear-gradient(Black 20px,red)
+.navbar ul li:hover {
+  background-color: crimson;
+  transition: all ease-in 0.5s;
 }
-
-.box3, .box4, .box5, .box6{
-    float: left;
-    margin: auto;
+.navbar ul ul {
+  display: none;
+}
+.navbar ul li:hover > ul {
+  display: block;
 }
 
-p{
-    padding-bottom: 100px;
+marquee {
+  color: red;
+  font-size: 50px;
 }
 
-.box-container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}   
-input{
-    font-size:20px;
+.box1 {
+  width: 600px;
+  height: 400px;
+  background-color: green;
+  position: relative;
+}
+.box2 {
+  width: 300px;
+  height: 200px;
+  background-color: red;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: auto;
+  border-radius: 50%;
+}
+.shamim {
+  color: red;
+  font-size: 50px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background-color: aqua;
+  font-style: oblique;
+}
+.box3 {
+  width: 400px;
+  height: 200px;
+  background-color: brown;
 }
 
-h3:nth-child(3){
-    color: red;
+.box4 {
+  width: 400px;
+  height: 200px;
+  background-color: blue;
+}
+.box5 {
+  width: 400px;
+  height: 200px;
+  background: linear-gradient(Black 20px, red);
 }
 
-p::first-letter{
-    color:red;
-    font-size:30px;
+.box3,
+.box4,
+.box5,
+.box6 {
+  float: left;
+  margin: auto;
 }
-img{
-    width:100px;
-}
-img:hover{
-    opacity:0.5;
-}
-.bg{
-    width:700px;
-    height: 400px;
-    background: url(love_2.jpg) no-repeat center;
-    overflow: hidden;
-    border: 1px solid red;
-    margin: 100px 100px;
 
-    box-shadow: 20px 10px 5px rgb(0,0,0,0.5),
-    -20px -10px 5px rgb(0,0,0,0.5);
+p {
+  padding-bottom: 100px;
 }
-.box h2{
+
+.box-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+input {
+  font-size: 20px;
+}
+
+h3:nth-child(3) {
+  color: red;
+}
+
+p::first-letter {
+  color: red;
+  font-size: 30px;
+}
+img {
+  width: 100px;
+}
+img:hover {
+  opacity: 0.5;
+}
+.bg {
+  width: 700px;
+  height: 400px;
+  background: url(love_2.jpg) no-repeat center;
+  overflow: hidden;
+  border: 1px solid red;
+  margin: 100px 100px;
+
+  box-shadow: 20px 10px 5px rgb(0, 0, 0, 0.5), -20px -10px 5px rgb(0, 0, 0, 0.5);
+}
+.box h2 {
   text-align: center;
   background-color: white;
   padding: 5px;
   margin-top: 200px;
-  opacity: 0.5;   
-    
+  opacity: 0.5;
 }
 
-.social{
-    width: 80px;
-    height: 80px;
-    background-image: url(social.png);
-    background-position: 0 -91px;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-    transition: 1s;
-    background-color: aqua;
- 
-    
+.social {
+  width: 80px;
+  height: 80px;
+  background-image: url(social.png);
+  background-position: 0 -91px;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  transition: 1s;
+  background-color: aqua;
 }
-.social:hover{
-    background-position: 0 -161px;
+.social:hover {
+  background-position: 0 -161px;
 }
-.transform h4{
-    text-align: center;
-    color: green;
-    font-size: 50px;
+.transform h4 {
+  text-align: center;
+  color: green;
+  font-size: 50px;
 }
-.box7{
-width: 400px;
-height: 400px;
-background-color: tomato;
-margin: 100px auto;
-position: relative;
-transform: skewY(35deg);
-
+.box7 {
+  width: 400px;
+  height: 400px;
+  background-color: tomato;
+  margin: 100px auto;
+  position: relative;
+  transform: skewY(35deg);
 }
 
-.box7 h5{
-    text-align: center;
-    color: white;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    top: 40%;
-    
+.box7 h5 {
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  top: 40%;
 }
