--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background-color: #ddd;
 }
 
-h1 {
+.head {
   background-color: blue;
   font-size: 80px;
   font-style: oblique;
@@ -15,16 +15,17 @@ h1 {
   position: sticky;
   z-index: inherit;
 }
-
+/*Header start*/
 header {
   width: 100%;
   color: rgb(240, 7, 7);
   display: flex;
+  position: relative;
+  margin-top: -50px;
 }
 .navbar {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  padding-left: 80px;
 }
 .navbar ul {
   list-style: none;
@@ -59,7 +60,9 @@ header {
 }
 .navbar ul li:hover > ul {
   display: block;
+  display: contents;
 }
+/*Header end*/
 
 marquee {
   color: red;
@@ -187,7 +190,7 @@ img:hover {
   width: 400px;
   height: 400px;
   background-color: tomato;
-  margin: 100px auto;
+  margin: 160px auto;
   position: relative;
   transform: skewY(35deg);
 }
@@ -199,4 +202,36 @@ img:hover {
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
   top: 40%;
+}
+/*Footer Start*/
+footer {
+  position: absolute;
+  text-align: center;
+  background-color: #4e4c4c;
+  color: white;
+  width: 100%;
+  padding-bottom: 10px;
+}
+.footer {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200px;
+  font-size: 50px;
+}
+h6 {
+  width: 600px;
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  margin-top: -30px;
+}
+.icon i {
+  font-size: 45px;
+  position: relative;
+  margin-top: -20px;
+  padding: 25px;
+}
+.copy {
+  background-color: black;
+  line-height: 50px;
+  font-size: 25px;
 }
